# MyOPSTools

./: .gitignore  README.md
.trae/documents/: plan.md  prd.md  spec.md  tasks.md  technical-architecture.md
.trae/rules/: project_rules.md
backend/: .env.example  .gitignore  Cargo.toml
backend/.sqlx/: query-00d96665e7844ffef60b5af8efdded2443e4ed4b2e4f40f9dcdbb8966f971e60.json  query-0fc206fc232e7b6c64c55bdddb628a807b972a889711114284da4a490ee079f4.json  query-4427b2433246c8b5cf0ef387c3985543ddd0cce55a7b39c28b6e76106bff57a8.json  query-4c0c29fb3d9f50d5c04e9d5db62e3f64d8df43b42d5991d7c85276873e24167b.json  query-57d832d08332fc2df25511a886438631e6210582603c54c72518cdac8d668190.json  query-9178bf61a85c646a2effc19599542cde463b75b87a78f3e751d29f6391faf270.json  query-9bf471c7c7f3dd38ba071e6cff75a07dc6dab49d4190b0be4c46f889570b3c39.json  query-d342903aa99df9c3d0abfb80b09da3d57d9d6e6356ecd50dc05754053ff8f324.json
backend/migrations/: 20260615000001_init.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
backend/src/agent/: message.rs  mod.rs  run_registry.rs  runtime.rs  title.rs  tool.rs
backend/src/model/: mock.rs  mod.rs  openai.rs  provider.rs
backend/src/repo/: message.rs  mod.rs  session.rs
backend/src/routes/: health.rs  messages.rs  mod.rs  runs.rs  sessions.rs  tools.rs
backend/src/tools/: echo.rs  http_get.rs  mod.rs  time.rs
frontend/: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
shared/: types.ts
(+40 files in other folders)
